fix-overflow-with zindex

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -19,7 +19,7 @@ header{
     padding: 0 100px;
     position: fixed;
     width: 100vw;
-
+    z-index: 2;
 }
 
 .logo{
